Fixed crash in Download Manager dismissal.

Do not animate the dismissal when the tab is closed or hidden.

Bug: 824017
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I11e2665301434d45677d339786bf6871315c9c63
Reviewed-on: https://chromium-review.googlesource.com/976090
Commit-Queue: Eugene But <eugenebut@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545530}
Former-commit-id: 99e03c32533d97e4cc623d5394dc19e5dff81e7e